--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "js-cookie": "^3.0.5",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.7",
