--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "js-cookie": "^3.0.5",
+    "luxon": "^3.6.1",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
