--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "feather-icons": "^4.29.2",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "luxon": "^3.6.1",
